# WhiteNoise

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/com/whitenoise/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Audio.cpp  Audio.h  Constants.h  native-lib.cpp
app/src/main/cpp/audio/: AAssetDataSource.h  DataSource.h  IRenderableAudio.h  Mixer.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h
app/src/main/cpp/utils/: UtilityFunctions.cpp  logging.h
app/src/main/java/com/jj/whitenoise/: MainActivity.java
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/com/whitenoise/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
